[FEAT] Added a parametar for getting user ID